2010-12-10  Romain Francois <romain@r-enthusiasts.com>

    * inst/include/Rcpp/barrier.h: faster versions (crossing the write barrier)
    for string_elt, etc ...(to be used only internally)
    
    * src/barrier.cpp: implementation of the above

2010-12-09  John M Chambers  <jmc@r-project.org>

	* src/Module.cpp: Rcpp/src/exceptions.cpp,
	Rcpp/src/Rcpp_init.c, etc. add a not_initialized exception and a
	dummy_pointer to identify such objects, throw exc. back to R

2010-12-07  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/vector/matrix.h: Matrix gains a nested ::Sub
	typedef

2010-12-05  Romain Francois <romain@r-enthusiasts.com>

	* inst/include/Rcpp/module/Module_generated_class_constructor.h: the
	default constructor was always considered valid because of the use of
	&yes instead of &yes_arity<0>

	* R/Rcpp.package.skeleton.R: Rcpp.package.skeleton( "foo",
	example_code = FALSE) did not work properly. Rcpp.package.skeleton
	gains some arguments

2010-12-05  Dirk Eddelbuettel  <edd@debian.org>

	* src/Date.cpp: Add 1900 to tm.year after mktime00() call as we now
	no longer assume the field is '1900-less'
	* src/Date.cpp: Define new static const variable baseYear as 1900
	and use throughout

	* inst/unitTests/runit.Date.R (test.Date.getFunctions): Added unit
	tests for the get* functions of the Date class

	* R/bib.R (bib): Correct expression for default Rcpp bibtex file

2010-12-04  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/Date.h: Remove addition of 1900 in getYear()

2010-12-04  Romain Francois <romain@r-enthusiasts.com>

	* inst/doc/Rcpp-quickref/Rcpp-quickref.Rnw: documentation patch by
	Christian Gunnning <xian@unm.edu>

	* inst/include/Rcpp/vector/matrix.h: fix SubMatrix. Bug reported by
	Christian Gunnning <xian@unm.edu> on Rcpp-devel

	* inst/include/Rcpp/vector/SubMatrix.h: factored out of matrix.h

	* inst/include/Rcpp/sprintf.h: new sprintf template to format strings

2010-12-03  Dirk Eddelbuettel  <edd@debian.org>
