@@ -4,6 +4,9 @@
     for string_elt, etc ...(to be used only internally)
     
     * src/barrier.cpp: implementation of the above
+    
+    * inst/include/Rcpp/internal/wrap.h: minor improvement in wrap thanks to 
+    the write barrier crossing
 
 2010-12-09  John M Chambers  <jmc@r-project.org>
 
